--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://hirk09.github.io/E-commerce-Product-Dashboard/",
   "name": "ecommerce-dashboard",
   "version": "0.1.0",
   "private": true,
